Kubernetes/9/allowhello.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allowhello
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello-node
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 80
  egress:
    - to:
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 80
