Kubernetes/9/deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny
spec:
  podSelector:
       matchLabels:
         app: hello-node
  policyTypes:
    - Ingress
